# coze-c

./: CMakeLists.txt  README.md  build.sh
coze_api/: CMakeLists.txt
coze_api/examples/: .env.example  CMakeLists.txt
coze_api/examples/coze_audio_rooms_create/: CMakeLists.txt  main.c
coze_api/examples/coze_audio_voices_list/: CMakeLists.txt  main.c
coze_api/examples/coze_auth_web_oauth_get_access_token/: CMakeLists.txt  main.c
coze_api/examples/coze_auth_web_oauth_get_oauth_url/: CMakeLists.txt  main.c
coze_api/examples/coze_auth_web_oauth_refresh_access_token/: CMakeLists.txt  main.c
coze_api/examples/coze_bots_create/: CMakeLists.txt  main.c
coze_api/examples/coze_bots_list/: CMakeLists.txt  main.c
coze_api/examples/coze_bots_publish/: CMakeLists.txt  main.c
coze_api/examples/coze_bots_retrieve/: CMakeLists.txt  main.c
coze_api/examples/coze_bots_update/: CMakeLists.txt  main.c
coze_api/examples/coze_chat_cancel/: CMakeLists.txt  main.c
coze_api/examples/coze_chat_create/: CMakeLists.txt  main.c
coze_api/examples/coze_chat_messages_list/: CMakeLists.txt  main.c
coze_api/examples/coze_chat_retrieve/: CMakeLists.txt  main.c
coze_api/examples/coze_chat_stream/: CMakeLists.txt  main.c
coze_api/examples/coze_chat_submit_tool_outputs_create/: CMakeLists.txt
coze_api/examples/coze_conversations_create/: CMakeLists.txt  main.c
coze_api/examples/coze_conversations_messages_create/: CMakeLists.txt  main.c
coze_api/examples/coze_conversations_messages_delete/: CMakeLists.txt  main.c
coze_api/examples/coze_conversations_messages_list/: CMakeLists.txt  main.c
coze_api/examples/coze_conversations_messages_retrieve/: CMakeLists.txt  main.c
coze_api/examples/coze_conversations_messages_update/: CMakeLists.txt  main.c
coze_api/examples/coze_conversations_retrieve/: CMakeLists.txt  main.c
coze_api/examples/coze_files_retrieve/: CMakeLists.txt  main.c
coze_api/examples/coze_files_upload/: CMakeLists.txt  main.c
coze_api/examples/coze_workflows_runs_create/: CMakeLists.txt  main.c
coze_api/examples/coze_workflows_runs_stream/: CMakeLists.txt  main.c
coze_api/examples/coze_workspaces_list/: CMakeLists.txt  main.c
coze_api/examples/json_example/: CMakeLists.txt  main.c
coze_api/include/: coze.h
coze_api/src/: coze.c
